--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "antd": "^3.24.1",
     "array-move": "2.1.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "formik": "^1.5.8",
+    "gsap": "^3.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
